seaqt/QtWidgets/gen_qinputdialog.nim

proc fcQInputDialog_getInt9(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: cint, minValue: cint, maxValue: cint, step: cint, ok: ptr bool, flags: cint): cint {.importc: "QInputDialog_getInt9".}
proc fcQInputDialog_getDouble4(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64): float64 {.importc: "QInputDialog_getDouble4".}
proc fcQInputDialog_getDouble5(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64): float64 {.importc: "QInputDialog_getDouble5".}
proc fcQInputDialog_getDouble6(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64): float64 {.importc: "QInputDialog_getDouble6".}
proc fcQInputDialog_getDouble7(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64, decimals: cint): float64 {.importc: "QInputDialog_getDouble7".}
proc fcQInputDialog_getDouble8(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64, decimals: cint, ok: ptr bool): float64 {.importc: "QInputDialog_getDouble8".}
proc fcQInputDialog_getDouble9(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64, decimals: cint, ok: ptr bool, flags: cint): float64 {.importc: "QInputDialog_getDouble9".}
proc fcQInputDialog_getDouble10(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64, decimals: cint, ok: ptr bool, flags: cint, step: float64): float64 {.importc: "QInputDialog_getDouble10".}
proc fQInputDialog_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QInputDialog_virtualbase_minimumSizeHint".}
proc fcQInputDialog_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_minimumSizeHint".}
proc fQInputDialog_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QInputDialog_virtualbase_sizeHint".}
proc fcQInputDialog_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_sizeHint".}
proc fQInputDialog_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QInputDialog_virtualbase_setVisible".}
proc fcQInputDialog_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_setVisible".}
proc fQInputDialog_virtualbase_done(self: pointer, resultVal: cint): void{.importc: "QInputDialog_virtualbase_done".}
proc fcQInputDialog_override_virtual_done(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_done".}
proc fQInputDialog_virtualbase_open(self: pointer, ): void{.importc: "QInputDialog_virtualbase_open".}
proc fcQInputDialog_override_virtual_open(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_open".}
proc fQInputDialog_virtualbase_exec(self: pointer, ): cint{.importc: "QInputDialog_virtualbase_exec".}
proc fcQInputDialog_override_virtual_exec(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_exec".}
proc fQInputDialog_virtualbase_accept(self: pointer, ): void{.importc: "QInputDialog_virtualbase_accept".}
proc fcQInputDialog_override_virtual_accept(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_accept".}
proc fQInputDialog_virtualbase_reject(self: pointer, ): void{.importc: "QInputDialog_virtualbase_reject".}
proc fcQInputDialog_override_virtual_reject(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_reject".}
proc fQInputDialog_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_keyPressEvent".}
proc fcQInputDialog_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_keyPressEvent".}
proc fQInputDialog_virtualbase_closeEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_closeEvent".}
proc fcQInputDialog_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_closeEvent".}
proc fQInputDialog_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_showEvent".}
proc fcQInputDialog_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_showEvent".}
proc fQInputDialog_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_resizeEvent".}
proc fcQInputDialog_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_resizeEvent".}
proc fQInputDialog_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_contextMenuEvent".}
proc fcQInputDialog_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_contextMenuEvent".}
proc fQInputDialog_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QInputDialog_virtualbase_eventFilter".}
proc fcQInputDialog_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_eventFilter".}
proc fQInputDialog_virtualbase_devType(self: pointer, ): cint{.importc: "QInputDialog_virtualbase_devType".}
proc fcQInputDialog_override_virtual_devType(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_devType".}
proc fQInputDialog_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QInputDialog_virtualbase_heightForWidth".}
proc fcQInputDialog_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_heightForWidth".}
proc fQInputDialog_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QInputDialog_virtualbase_hasHeightForWidth".}
proc fcQInputDialog_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_hasHeightForWidth".}
proc fQInputDialog_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QInputDialog_virtualbase_paintEngine".}
proc fcQInputDialog_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_paintEngine".}
proc fQInputDialog_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QInputDialog_virtualbase_event".}
proc fcQInputDialog_override_virtual_event(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_event".}
proc fQInputDialog_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_mousePressEvent".}
proc fcQInputDialog_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_mousePressEvent".}
proc fQInputDialog_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_mouseReleaseEvent".}
proc fcQInputDialog_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_mouseReleaseEvent".}
proc fQInputDialog_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_mouseDoubleClickEvent".}
proc fcQInputDialog_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_mouseDoubleClickEvent".}
proc fQInputDialog_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_mouseMoveEvent".}
proc fcQInputDialog_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_mouseMoveEvent".}
proc fQInputDialog_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_wheelEvent".}
proc fcQInputDialog_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_wheelEvent".}
proc fQInputDialog_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_keyReleaseEvent".}
proc fcQInputDialog_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_keyReleaseEvent".}
proc fQInputDialog_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_focusInEvent".}
proc fcQInputDialog_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_focusInEvent".}
proc fQInputDialog_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_focusOutEvent".}
proc fcQInputDialog_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_focusOutEvent".}
proc fQInputDialog_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_enterEvent".}
proc fcQInputDialog_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_enterEvent".}
proc fQInputDialog_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_leaveEvent".}
proc fcQInputDialog_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_leaveEvent".}
proc fQInputDialog_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_paintEvent".}
proc fcQInputDialog_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_paintEvent".}
proc fQInputDialog_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_moveEvent".}
proc fcQInputDialog_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_moveEvent".}
proc fQInputDialog_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_tabletEvent".}
proc fcQInputDialog_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_tabletEvent".}
proc fQInputDialog_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_actionEvent".}
proc fcQInputDialog_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_actionEvent".}
proc fQInputDialog_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dragEnterEvent".}
proc fcQInputDialog_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dragEnterEvent".}
proc fQInputDialog_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dragMoveEvent".}
proc fcQInputDialog_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dragMoveEvent".}
proc fQInputDialog_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dragLeaveEvent".}
proc fcQInputDialog_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dragLeaveEvent".}
proc fQInputDialog_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dropEvent".}
proc fcQInputDialog_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dropEvent".}
proc fQInputDialog_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_hideEvent".}
proc fcQInputDialog_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_hideEvent".}
proc fQInputDialog_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QInputDialog_virtualbase_nativeEvent".}
proc fcQInputDialog_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_nativeEvent".}
